Resolve layering issue preventing clicks under invisible bottom row or preventing row from displaying in small

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -1,6 +1,5 @@
 .full-height {
 	min-height: 100% !important;
-	position: static;
 }
 
 .full-width {
@@ -15,7 +14,7 @@
 	padding: 0 !important;
 }
 
-#sidebar, .add-button-row, .settings, .color-hook {
+.sidebar, .add-button-row, .settings, .color-hook {
 	min-width: 180px !important;
 }
 
@@ -44,11 +43,6 @@ html, body {
 		height: auto !important;
 		min-height: 100%;
 	}
-}
-
-
-body {
-	z-index: 100;
 }
 
 // for tooltips
@@ -96,11 +90,18 @@ body {
 	}
 }
 
+@media only screen and (max-width: 40em) {
+	.row.cling-bottom {
+		z-index: 101;
+	}
+}
 
 main {
 	padding-top: 2em;
 	background-color: white;
 	margin-bottom: 2em;
+	position: relative;
+	z-index: 100;
 
 	a.regular-link, a.regular-link:visited {
 		color: $c-link-unchanging;
@@ -151,7 +152,13 @@ form {
 	}
 }
 
-#sidebar {
+aside.sidebar {
+	padding: 3em 0;
+}
+
+.sidebar {
+	background-color: $c-bg-primary;
+	color: $c-text-primary;
 	text-align: center;
 	position: absolute;
 	top: 0;
@@ -159,15 +166,6 @@ form {
 	left: 0;
 	-ms-overflow-x: hidden;
 	overflow-x: hidden;
-}
-
-aside#sidebar {
-	padding: 3em 0;
-}
-
-.sidebar {
-	background-color: $c-bg-primary;
-	color: $c-text-primary;
 
 	h5 {
 		// border: 2px solid black;
